# colorless

./: .gitignore  .travis.yml  README.md  colorless.cabal  json.txt  package.json  stack.yaml  targets.txt
app/: Main.hs
colorless/: colorless.cabal
colorless-bin/: colorless-bin.cabal
colorless-bin/app/: Main.hs
colorless-server/: colorless-server.cabal
colorless-server/src/Colorless/: Server.hs
colorless-server/test/Test/Colorless/: ServerSpec.hs
colorless/examples/: Calculator.0.rls  Services.0.rls  Spec.0.rls  server.py
colorless/src/: Colorless.hs
colorless/src/Colorless/: Parser.hs
colorless/src/Colorless/CodeGen/: Types.hs
colorless/src/Colorless/CodeGen/Format/: Json.hs
colorless/src/Colorless/Lexical/: Types.hs
colorless/src/Colorless/Parser/: Atomic.hs  Combinator.hs  Declaration.hs  Lexer.hs  Primitive.hs  Prototypes.hs  Semantic.hs  Syntax.hs  Token.hs  Types.hs
colorless/src/Colorless/Semantic/: Types.hs
colorless/src/Colorless/Syntax/: Atomic.hs  Combinator.hs  Declaration.hs  Monad.hs  Semantic.hs  Token.hs  Types.hs
colorless/test/Test/: ColorlessSpec.hs
colorless/test/Test/Colorless/: LexerSpec.hs  ParserSpec.hs  SyntaxSpec.hs
colorless/test/Test/Colorless/Parser/: AtomicSpec.hs  CombinatorSpec.hs  DeclarationSpec.hs  TokenSpec.hs
colorless/test/Test/Colorless/Syntax/: AtomicSpec.hs  CombinatorSpec.hs  DeclarationSpec.hs  TokenSpec.hs
examples/: Calculator.0.rls  Calculator.1.rls  Calculator.rls  Deck.0.rls  HelloWorld.0.json  HelloWorld.rls  Imports.0.rls  Phonebook.0.json  Services.0.rls  Spec.0.rls  Spec.rls  colorless.js  gen.sh
examples/HelloWorld/: 0.json  1.json  2.json  3.json
examples/HelloWorld/haskell-client/: HelloWorld.hs  Main.hs  helloworld-client.cabal  stack.yaml
examples/HelloWorld/haskell-server/: HelloWorld.hs  Main.hs  helloworld-server.cabal  helloworld.cabal  package.yaml  stack.yaml
examples/HelloWorld/javascript-client/: helloWorld.js
examples/HelloWorld/purescript-client/: HelloWorld.purs  psc-package.json
examples/HelloWorld/purescript-server/: HelloWorld.purs  psc-package.json
examples/HelloWorld/specs/: 0.json
examples/HelloWorldDistributed/haskell-server/: HelloWorld.hs
examples/HelloWorldPublic/: spec.json  specs.json
examples/HelloWorldPublic/haskell-client/: HelloWorld.hs  Main.hs  helloworld-client.cabal  package.yaml  stack.yaml
examples/HelloWorldPublic/haskell-server/: HelloWorld.hs  Main.hs  helloworld.cabal  package.yaml  stack.yaml
examples/HelloWorldPublic/javascript-client/: helloWorld.js
examples/Phonebook/haskell-client/: Main.hs  Phonebook.hs  package.yaml  phonebook-client.cabal  stack.yaml
examples/Phonebook/haskell-server/: Main.hs  Phonebook.hs  package.yaml  phonebook-server.cabal  phonebook.cabal  stack.yaml
examples/Phonebook/javascript-client/: phonebook.js
examples/Phonebook/purescript-server/: psc-package.json
examples/Phonebook/specs/: 0.json
fluid-cli/: README.md  psc-package.json
fluid-cli/output/Control.Alt/: externs.json
fluid-cli/output/Control.Alternative/: externs.json
fluid-cli/output/Control.Applicative/: externs.json
fluid-cli/output/Control.Apply/: externs.json
fluid-cli/output/Control.Biapplicative/: externs.json
fluid-cli/output/Control.Biapply/: externs.json
fluid-cli/output/Control.Bind/: externs.json
fluid-cli/output/Control.Category/: externs.json
fluid-cli/output/Control.Comonad/: externs.json
fluid-cli/output/Control.Comonad.Cofree/: externs.json  index.js
fluid-cli/output/Control.Comonad.Env/: externs.json
fluid-cli/output/Control.Comonad.Env.Class/: externs.json
fluid-cli/output/Control.Comonad.Env.Trans/: externs.json  index.js
fluid-cli/output/Control.Comonad.Store/: externs.json
fluid-cli/output/Control.Comonad.Store.Class/: externs.json
fluid-cli/output/Control.Comonad.Store.Trans/: externs.json
fluid-cli/output/Control.Comonad.Traced/: externs.json
fluid-cli/output/Control.Comonad.Traced.Class/: externs.json
fluid-cli/output/Control.Comonad.Traced.Trans/: externs.json
fluid-cli/output/Control.Comonad.Trans.Class/: externs.json
fluid-cli/output/Control.Extend/: externs.json
fluid-cli/output/Control.Lazy/: externs.json
fluid-cli/output/Control.Monad/: externs.json
fluid-cli/output/Control.Monad.Aff/: externs.json
fluid-cli/output/Control.Monad.Aff.AVar/: externs.json
fluid-cli/output/Control.Monad.Aff.Class/: externs.json
fluid-cli/output/Control.Monad.Aff.Compat/: externs.json
fluid-cli/output/Control.Monad.Aff.Console/: externs.json
fluid-cli/output/Control.Monad.Aff.Unsafe/: externs.json
fluid-cli/output/Control.Monad.Cont/: externs.json
fluid-cli/output/Control.Monad.Cont.Class/: externs.json
fluid-cli/output/Control.Monad.Cont.Trans/: externs.json
fluid-cli/output/Control.Monad.Eff/: externs.json
fluid-cli/output/Control.Monad.Eff.AVar/: externs.json
fluid-cli/output/Control.Monad.Eff.Class/: externs.json
fluid-cli/output/Control.Monad.Eff.Console/: externs.json
fluid-cli/output/Control.Monad.Eff.Exception/: externs.json
fluid-cli/output/Control.Monad.Eff.Exception.Unsafe/: externs.json
fluid-cli/output/Control.Monad.Eff.Now/: externs.json
fluid-cli/output/Control.Monad.Eff.Ref/: externs.json
fluid-cli/output/Control.Monad.Eff.Ref.Unsafe/: externs.json
fluid-cli/output/Control.Monad.Eff.Uncurried/: externs.json
fluid-cli/output/Control.Monad.Eff.Unsafe/: externs.json
fluid-cli/output/Control.Monad.Error.Class/: externs.json
fluid-cli/output/Control.Monad.Except/: externs.json
fluid-cli/output/Control.Monad.Except.Trans/: externs.json
fluid-cli/output/Control.Monad.Free/: externs.json
fluid-cli/output/Control.Monad.Gen/: externs.json
fluid-cli/output/Control.Monad.Gen.Class/: externs.json
fluid-cli/output/Control.Monad.Gen.Common/: externs.json
fluid-cli/src/: Main.purs
src/: cli.js  diff.js  index.js
src/haskell/: common.js  gen.js  index.js  latest.js  spec.js
src/javascript/: clientLatest.js  index.js  spec.js
src/ruby/: index.js
test/: haskell.spec.js  lines.spec.js
test/Test/: ColorlessSpec.hs
(+361 files in other folders)
