name:
  colorless-server
version:
  0.0.0
synopsis:
  Yet another IDL for RPC (server)
description:
  Please see README.md
homepage:
  http://github.com/jxv/colorless#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  http://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Colorless.Server
  build-depends:
      base >= 4.7 && < 5
    , pregame == 1.0.3.0
    , megaparsec
    , colorless
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections

executable colorless-server
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , colorless-server
  default-language:
    Haskell2010

test-suite colorless-server-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , colorless
    , colorless-server
    , hspec
    , pregame == 1.0.3.0
    , fixie
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell
    QuasiQuotes

source-repository head
  type:
    git
  location:
    https://github.com/jxv/colorless
