name:
  colorless
version:
  0.0.0
synopsis:
  Yet another IDL for RPC
description:
  Please see README.md
homepage:
  http://github.com/jxv/colorless#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  http://github.com/jxv
copyright:
  2016-2017 Joe Vargas
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Colorless.CodeGen.Format.Json
    Colorless.CodeGen.Target.Clojure.Server
    Colorless.CodeGen.Target.Clojure.Client
    Colorless.CodeGen.Target.Go.Server
    Colorless.CodeGen.Target.Go.Client
    Colorless.CodeGen.Target.Haskell.Server
    Colorless.CodeGen.Target.Haskell.Client
    Colorless.CodeGen.Target.Java.Server
    Colorless.CodeGen.Target.Java.Client
    Colorless.CodeGen.Target.JavaScript.Server
    Colorless.CodeGen.Target.JavaScript.Client
    Colorless.CodeGen.Target.Python.Server
    Colorless.CodeGen.Target.Python.Client
    Colorless.CodeGen.Target.Ruby.Server
    Colorless.CodeGen.Target.Ruby.Client
    Colorless.CodeGen.Target.Rust.Server
    Colorless.CodeGen.Target.Rust.Client
    Colorless.CodeGen.Target.Scala.Server
    Colorless.CodeGen.Target.Scala.Client
    Colorless.CodeGen.Target.Swift.Server
    Colorless.CodeGen.Target.Swift.Client
    Colorless.Lexical.Types
    Colorless.Semantic.Types
    Colorless.Syntax.Atomic
    Colorless.Syntax.Combinator
    Colorless.Syntax.Declaration
    Colorless.Syntax.Monad
    Colorless.Syntax.Token
    Colorless.Syntax.Types
  build-depends:
      base >= 4.7 && < 5
    , pregame == 1.0.3.0
    , megaparsec
    , language-python
    , haskell-src-exts
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    DuplicateRecordFields
    OverloadedLists

test-suite colorless-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , colorless
    , hspec
    , pregame == 1.0.3.0
    , megaparsec
    , fixie
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell
    QuasiQuotes
    DuplicateRecordFields
    RankNTypes
    OverloadedLists

source-repository head
  type:
    git
  location:
    https://github.com/jxv/colorless
