name:
  colorless
version:
  0.0.0
synopsis:
  Yet another IDL for RPC
description:
  Please see README.md
homepage:
  http://github.com/jxv/colorless#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  http://github.com/jxv
copyright:
  2016-2017 Joe Vargas
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Colorless.CodeGen.Format.Json
    Colorless.CodeGen.Target.ActionScript.ClientHttpJson
    Colorless.CodeGen.Target.ActionScript.ServerHttpJson
    Colorless.CodeGen.Target.ChickenScheme.ClientHttpJson
    Colorless.CodeGen.Target.ChickenScheme.ServerHttpJson
    Colorless.CodeGen.Target.Clojure.ClientHttpJson
    Colorless.CodeGen.Target.Clojure.ServerHttpJson
    Colorless.CodeGen.Target.CoffeeScript.ClientHttpJson
    Colorless.CodeGen.Target.CoffeeScript.ServerHttpJson
    Colorless.CodeGen.Target.CommonLisp.ClientHttpJson
    Colorless.CodeGen.Target.CommonLisp.ServerHttpJson
    Colorless.CodeGen.Target.Cpp.ClientHttpJson
    Colorless.CodeGen.Target.Cpp.ServerHttpJson
    Colorless.CodeGen.Target.Crystal.ClientHttpJson
    Colorless.CodeGen.Target.Crystal.ServerHttpJson
    Colorless.CodeGen.Target.CSharp.ClientHttpJson
    Colorless.CodeGen.Target.CSharp.ServerHttpJson
    Colorless.CodeGen.Target.D.ClientHttpJson
    Colorless.CodeGen.Target.D.ServerHttpJson
    Colorless.CodeGen.Target.Delphi.ClientHttpJson
    Colorless.CodeGen.Target.Delphi.ServerHttpJson
    Colorless.CodeGen.Target.Dart.ClientHttpJson
    Colorless.CodeGen.Target.Dart.ServerHttpJson
    Colorless.CodeGen.Target.Elixir.ClientHttpJson
    Colorless.CodeGen.Target.Elixir.ServerHttpJson
    Colorless.CodeGen.Target.Elm.ClientHttpJson
    Colorless.CodeGen.Target.Elm.ServerHttpJson
    Colorless.CodeGen.Target.Erlang.ClientHttpJson
    Colorless.CodeGen.Target.Erlang.ServerHttpJson
    Colorless.CodeGen.Target.Frege.ClientHttpJson
    Colorless.CodeGen.Target.Frege.ServerHttpJson
    Colorless.CodeGen.Target.FSharp.ClientHttpJson
    Colorless.CodeGen.Target.FSharp.ServerHttpJson
    Colorless.CodeGen.Target.GambitScheme.ClientHttpJson
    Colorless.CodeGen.Target.GambitScheme.ServerHttpJson
    Colorless.CodeGen.Target.Go.ClientHttpJson
    Colorless.CodeGen.Target.Go.ServerHttpJson
    Colorless.CodeGen.Target.Groovy.ClientHttpJson
    Colorless.CodeGen.Target.Groovy.ServerHttpJson
    Colorless.CodeGen.Target.GuileScheme.ClientHttpJson
    Colorless.CodeGen.Target.GuileScheme.ServerHttpJson
    Colorless.CodeGen.Target.Hackett.ClientHttpJson
    Colorless.CodeGen.Target.Hackett.ServerHttpJson
    Colorless.CodeGen.Target.Haskell.ClientHttpJson
    Colorless.CodeGen.Target.Haskell.ServerHttpJson
    Colorless.CodeGen.Target.Haxe.ClientHttpJson
    Colorless.CodeGen.Target.Haxe.ServerHttpJson
    Colorless.CodeGen.Target.Hy.ClientHttpJson
    Colorless.CodeGen.Target.Hy.ServerHttpJson
    Colorless.CodeGen.Target.Idris.ClientHttpJson
    Colorless.CodeGen.Target.Idris.ServerHttpJson
    Colorless.CodeGen.Target.Io.ClientHttpJson
    Colorless.CodeGen.Target.Io.ServerHttpJson
    Colorless.CodeGen.Target.Java.ClientHttpJson
    Colorless.CodeGen.Target.Java.ServerHttpJson
    Colorless.CodeGen.Target.JavaScript.BrowserClientHttpJson
    Colorless.CodeGen.Target.JavaScript.NodeClientHttpJson
    Colorless.CodeGen.Target.JavaScript.NodeServerHttpJson
    Colorless.CodeGen.Target.Julia.ClientHttpJson
    Colorless.CodeGen.Target.Julia.ServerHttpJson
    Colorless.CodeGen.Target.Kotlin.ClientHttpJson
    Colorless.CodeGen.Target.Kotlin.ServerHttpJson
    Colorless.CodeGen.Target.LabVIEW.ClientHttpJson
    Colorless.CodeGen.Target.LabVIEW.ServerHttpJson
    Colorless.CodeGen.Target.Lua.ClientHttpJson
    Colorless.CodeGen.Target.Lua.ServerHttpJson
    Colorless.CodeGen.Target.Nim.ClientHttpJson
    Colorless.CodeGen.Target.Nim.ServerHttpJson
    Colorless.CodeGen.Target.ObjectiveC.ClientHttpJson
    Colorless.CodeGen.Target.ObjectiveC.ServerHttpJson
    Colorless.CodeGen.Target.OCaml.ClientHttpJson
    Colorless.CodeGen.Target.OCaml.ServerHttpJson
    Colorless.CodeGen.Target.Octave.ClientHttpJson
    Colorless.CodeGen.Target.Octave.ServerHttpJson
    Colorless.CodeGen.Target.Perl.ClientHttpJson
    Colorless.CodeGen.Target.Perl.ServerHttpJson
    Colorless.CodeGen.Target.PHP.ClientHttpJson
    Colorless.CodeGen.Target.PHP.ServerHttpJson
    Colorless.CodeGen.Target.Prolog.ClientHttpJson
    Colorless.CodeGen.Target.Prolog.ServerHttpJson
    Colorless.CodeGen.Target.PureScript.ClientHttpJson
    Colorless.CodeGen.Target.PureScript.ServerHttpJson
    Colorless.CodeGen.Target.Python.ClientHttpJson
    Colorless.CodeGen.Target.Python.ServerHttpJson
    Colorless.CodeGen.Target.R.ClientHttpJson
    Colorless.CodeGen.Target.R.ServerHttpJson
    Colorless.CodeGen.Target.Racket.ClientHttpJson
    Colorless.CodeGen.Target.Racket.ServerHttpJson
    Colorless.CodeGen.Target.Ruby.ClientHttpJson
    Colorless.CodeGen.Target.Ruby.ServerHttpJson
    Colorless.CodeGen.Target.Rust.ClientHttpJson
    Colorless.CodeGen.Target.Rust.ServerHttpJson
    Colorless.CodeGen.Target.Scala.ClientHttpJson
    Colorless.CodeGen.Target.Scala.ServerHttpJson
    Colorless.CodeGen.Target.Squeak.ClientHttpJson
    Colorless.CodeGen.Target.Squeak.ServerHttpJson
    Colorless.CodeGen.Target.Swift.ClientHttpJson
    Colorless.CodeGen.Target.Swift.ServerHttpJson
    Colorless.CodeGen.Target.TypeScript.ClientHttpJson
    Colorless.CodeGen.Target.TypeScript.ServerHttpJson
    Colorless.CodeGen.Target.Vala.ClientHttpJson
    Colorless.CodeGen.Target.Vala.ServerHttpJson
    Colorless.Lexical.Types
    Colorless.Semantic.Types
    Colorless.Syntax.Atomic
    Colorless.Syntax.Combinator
    Colorless.Syntax.Declaration
    Colorless.Syntax.Monad
    Colorless.Syntax.Token
    Colorless.Syntax.Types
  build-depends:
      base >= 4.7 && < 5
    , pregame == 1.0.3.0
    , megaparsec
    , language-python
    , haskell-src-exts
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    DuplicateRecordFields
    OverloadedLists

test-suite colorless-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , colorless
    , hspec
    , pregame == 1.0.3.0
    , megaparsec
    , fixie
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell
    QuasiQuotes
    DuplicateRecordFields
    RankNTypes
    OverloadedLists

source-repository head
  type:
    git
  location:
    https://github.com/jxv/colorless
